feat: Check of multi users

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       - BOT_USER=<YOUR_BOT_NAME>
       - BOT_TOKEN=<YOUR_BOT_TOKEN_WITH_SCOPES>
-      - CHANNEL_TO_JOIN=<CHANNEL_THAT_BOT_WILL_VERIFY>
+      - CHANNELS_TO_JOIN=<CHANNELS_THAT_BOT_WILL_VERIFY_SEPARATED_BY_COMMA>
       - BOT_CLIENT_ID=<THE_BOT_CLIENT_FROM_DEVELOPER_CONSOLE>
       - BOT_CHECKER_ACTIVE=Y
       - CHATTERS_TO_IGNORE=<USERS_THAT_WILL_BE_IGNORED_SEPARATED_BY_COMMA>
