--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: Set up docker QUEMU for ARM
+      uses: docker/setup-qemu-action@v2
+      with:
+        platforms: 'arm64'
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Log in to the Container registry
@@ -36,6 +40,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
